# wayflow

./: requirements-dev.txt
.github/workflows/: regression.yml
wayflowcore/: pyproject.toml  tox.ini
wayflowcore/src/wayflowcore/serialization/: _builtins_deserialization_plugin.py  _builtins_serialization_plugin.py
wayflowcore/tests/: conftest.py  env_utils.py
wayflowcore/tests/a2a/: conftest.py  start_a2a_server.py  test_a2aagent.py  test_a2aserver.py
wayflowcore/tests/agentserver/: conftest.py
wayflowcore/tests/agentspec/: test_agentspec_conversion_coverage.py  test_agentspec_to_core_conversion.py
wayflowcore/tests/datastores/: conftest.py
wayflowcore/tests/mcptools/: conftest.py
wayflowcore/tests/models/: test_models.py  test_ocigenaimodel.py
wayflowcore/tests/security/: check_rootLogger_handles_are_null.py
wayflowcore/tests/serialization/: conftest.py  test_a2a_serialization.py  test_llm_serialization.py  test_serializableobject.py
wayflowcore/tests/tracing/: test_tracing.py
wayflowcore/tests/tracing/opentelemetry/: otel_server_utils.py
